@@ -1,5 +1,13 @@
 2023-11-13 Philipp Klaus Krause <philipp@colecovision.eu>
 
+	* src/mcs51/gen.c,
+	  src/mcs51/gen.h,
+	  src/stm8/gen.c,
+	  src/z80/gen.c:
+	  Handle return values via aopRet.
+
+2023-11-13 Philipp Klaus Krause <philipp@colecovision.eu>
+
 	* src/mcs51/gen.h,
 	  src/mcs51/gen.c:
 	  mcs51 code generation refactoring.
